# AI-Powered-Multi-Agent-Travel-Planner

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt  travel.py
agents/: attractions.py  itinerary.py  summary.py
crew/: assemble.py
tasks/: attractions_task.py  hotels_task.py  itinerary_task.py  restaurants_task.py  summary_task.py  transport_task.py
tools/: fallback_search.py  serper_search.py
